# cp

./: .clang-format  NOTES.md
CodeChef/CDRV21B/CHEFFAV/: generate.py  naive.py  x.cpp
CodeChef/CDRV21B/CNTARRAY/: generate.py  naive.py  x.cpp
CodeChef/CDRV21B/CNTPEAK/: naive.py  x.cpp
CodeChef/CDRV21B/CNTSEQ/: naive.py  x.cpp
CodeChef/CDRV21B/EVOFWEIRDSUM/: naive.py  x.cpp
CodeChef/CDRV21B/FIXTREE/: naive.py  x.cpp
CodeChef/CDRV21B/FRGAME/: naive.py  x.cpp
CodeChef/CDRV21B/KLXOR/: generate.py  naive.py  x.cpp
CodeChef/CDRV21B/MXFACS/: generate.py  x.cpp
CodeChef/COOK136C/ANGSPLIT/: naive.py  x.cpp
CodeChef/COOK136C/BINSTRGAME/: generate.py  naive.py  x.cpp
CodeChef/COOK136C/BREAKBAL/: generate.py  naive.py  x.cpp
CodeChef/COOK136C/DESTRUCT/: x.cpp
CodeChef/COOK136C/FRIMEET/: generate.py  x.cpp  (+1 more)
Codeforces/1620/: B.cpp  C.cpp  E.cpp  x.cpp
Codeforces/t/: x.cpp
aoc/: Cargo.toml
aoc/src/: day13.rs  lib.rs  main.rs
hr/a/: x.cpp
hr/b/: x.cpp
hr/c/: x.cpp
hr/d/: x.cpp
hr/e/: x.cpp
hr/f/: x.cpp
lc/: x.rs
lc/baloon-burst/: x.cpp
lc/bi69/: test  x.cpp
lc/del-and-earn/: in  in2  x.cpp
lc/first-missing-positive/: x.cpp
lc/histo-mx-ar/: x.cpp
lc/interleave-str/: x.cpp
lc/lru/: lru.cpp
lc/process-task-using-servers/: x.cpp
lc/regex-matching/: x.cpp
lc/rot-list/: x.cpp
lc/scramble-string/: in  in2  in3  in4  run.sh  x.cpp
lc/trap-water/: x.cpp
rust/.cargo/: config.toml
rust/1619/: 1619.rs  A.rs  B.rs  C.rs  Cargo.toml  E.rs  G.rs  out  out.rs
rust/scripts/: c  e  gdb  gi  rp  s
scripts/: c  e
tmp/: x.cpp
(+428 files in other folders)
