[package]
name = "cf"
version = "0.1.0"
edition = "2021"

[dependencies]
cp = { path = "../cp" }

[[bin]]
name = "A"
path = "A.rs"

[[bin]]
name = "B"
path = "B.rs"

[[bin]]
name = "C"
path = "C.rs"

[[bin]]
name = "D"
path = "D.rs"

[[bin]]
name = "E"
path = "E.rs"

[[bin]]
name = "F"
path = "F.rs"

[[bin]]
name = "G"
path = "G.rs"

[[bin]]
name = "H"
path = "H.rs"

